apps/base/customer1/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: customer1 
spec:
  parentRefs:
  - name: external-http-gateway 
  hostnames:
  - "n8n.sirius-sec.com"
  rules:
    - backendRefs:
      - name: n8n-service  # The name of your Kubernetes Service
        port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: siriusdevops-route
  namespace: customer1
spec:
  parentRefs:
  - name: external-http-gateway
  hostnames:
  - "siriusdevops.com"
  rules:
    - backendRefs:
      - name: siriusdevops-site-svc
        port: 80
